# YoubotDriver

./: CMakeLists.txt  README.md  ROS_Dev_ReadMe.txt
cmake/: ConfigLinuxTODO.cmake.in  ConfigWindows.cmake.in  FindMatlab.cmake  ThirdPartyHandling.cmake
config/: config.cfg  youBotArmConfig_fromKeisler.json  youBotArmConfig_fromMoveIt.json  youBotArmConfig_fromfactory.json  youbot-ethercat.cfg
example/: CMakeLists.txt  tester.cpp
example/cmake/: ThirdPartyHandling.cmake
fromscratch/: CMakeLists.txt  EthercatMailboxRequest.cpp  EthercatMailboxRequest.hpp  MailboxMessage.cpp  MailboxMessage.hpp  ProcessBuffer.cpp  ProcessBuffer.hpp  SOEMMessageCenter.cpp  SOEMMessageCenter.hpp  TMCLDefinitions.cpp  TMCLDefinitions.hpp  TMCLMailboxMessage.cpp  TMCLMailboxMessage.hpp  TMCLMessageTemplates.cpp  TMCLMessageTemplates.hpp  TMCLMessages.cpp  TMCLMessages.hpp  VMessageCenter.cpp  VMessageCenter.hpp  YoubotConfig.hpp  YoubotJoint.cpp  YoubotJoint.hpp  YoubotManipulator.cpp  YoubotManipulator.hpp  findcica.cpp  youBotArmConfig_fromMoveIt.json  youBotArmConfig_fromdriver.json
lowlevelcontrol/: CMakeLists.txt  Config.cpp  Config.hpp  Data.hpp  DataObjectLockFree.hpp  EtherCATMaster.cpp  EtherCATMaster.hpp  Joint.cpp  Joint.hpp  JointData.cpp  JointPhysical.cpp  JointPhysical.hpp  JointState.cpp  JointState.hpp  JointVirtual.cpp  JointVirtual.hpp  Logger.cpp  Logger.hpp  MailboxMessage.hpp  Manipulator.cpp  Manipulator.hpp  ProcessBuffer.cpp  ProcessBuffer.hpp  SOEMMessageCenter.cpp  SOEMMessageCenter.hpp  SimpleOpenEtherCATMaster.cpp  SimpleOpenEtherCATMaster.hpp  TMCLDefinitions.cpp  TMCLDefinitions.hpp  TMCLMailboxMessage.cpp  TMCLMailboxMessage.hpp  Time.hpp  VMessageCenter.cpp  VMessageCenter.hpp  VirtualEtherCATMaster.cpp  VirtualEtherCATMaster.hpp  YouBotJoint.cpp  YouBotJoint.hpp  YouBotJointParameter.cpp  YouBotJointParameterPasswordProtected.cpp  (+30 more)
lowlevelcontrol/os/: oro_arch.h
manipulatormodul/: CMakeLists.txt  MTask.cpp  MTask.hpp  MTaskCalibration.cpp  MTaskCalibration.hpp  MTaskCommutation.cpp  MTaskCommutation.hpp  MTaskGenericRawConstant.cpp  MTaskGenericRawConstant.hpp  MTaskRawConstantJointPosition.cpp  MTaskRawConstantJointPosition.hpp  MTaskRawConstantJointSpeed.cpp  MTaskRawConstantJointSpeed.hpp  MTaskStop.cpp  MTaskStop.hpp  MTaskZeroCurrent.cpp  MTaskZeroCurrent.hpp  Manager.cpp  Manager.hpp  ManipulatorTask.cpp  ManipulatorTask.hpp  Module.cpp  Module.hpp  MotionLayer.cpp  MotionLayer.hpp  RawConstantJointSpeedTask.cpp  RawConstantJointSpeedTask.hpp  YoubotManipulatorModul.cpp  YoubotManipulatorModul.hpp  YoubotManipulatorMotionLayer.cpp  YoubotManipulatorMotionLayer.hpp
matlabexporter/: CMakeLists.txt  MovingLine.m  YoubotManager.m  mexYouBot.cpp  script.m  test.m  youbotApp.mlapp  youbot_demo.mlx  youbotplotter.m
modultester/: CMakeLists.txt  modultester.cpp
old/: CMakeLists.txt  DataObjectLockFree.hpp  DataTrace.cpp  DataTrace.hpp  EthercatMasterInterface.cpp  EthercatMasterWithThread.cpp  EthercatMasterWithThread.hpp  FourSwedishWheelOmniBaseKinematic.hpp  FourSwedishWheelOmniBaseKinematicConfiguration.cpp  FourSwedishWheelOmniBaseKinematicConfiguration.hpp  GripperDataTrace.cpp  GripperDataTrace.hpp  JointLimitMonitor.cpp  JointTrajectoryController.cpp  OneDOFGripperData.hpp  PidController.hpp  TMCLProtocolDefinitions.hpp  Time.hpp  YouBotBase.hpp  YouBotGripper.hpp  YouBotGripperBar.cpp  YouBotGripperParameter.cpp  YouBotJoint.cpp  YouBotJointInfo.hpp  YouBotManipulator.hpp  YouBotSlaveMailboxMsg.hpp  YouBotSlaveMsg.hpp
oldshit/: CMakeLists.txt  EthercatMaster.cpp  EthercatMaster.hpp  EthercatMasterInterface.cpp  EthercatMasterInterface.hpp  EthercatMasterWithThread.cpp  EthercatMasterWithThread.hpp  EthercatMasterWithoutThread.cpp  EthercatMasterWithoutThread.hpp  FourSwedishWheelOmniBaseKinematic.cpp  FourSwedishWheelOmniBaseKinematic.hpp  Gripper.hpp  GripperData.hpp  GripperParameter.hpp  Joint.hpp  JointData.hpp  JointLimitMonitor.cpp  JointLimitMonitor.hpp  JointTrajectory.cpp  JointTrajectory.hpp  JointTrajectoryController.cpp  JointTrajectoryController.hpp  Logger.cpp  Logger.hpp  OneDOFGripper.hpp  OneDOFGripperData.hpp  PidController.cpp  PidController.hpp  TMCLProtocolDefinitions.hpp  WheeledBaseKinematic.cpp  WheeledBaseKinematic.hpp  YouBotBase.cpp  YouBotGripper.cpp  YouBotGripper.hpp  YouBotGripperBar.hpp  YouBotGripperParameter.hpp  YouBotJoint.cpp  YouBotJoint.hpp  YouBotJointInfo.hpp  YouBotJointParameter.cpp  (+7 more)
pythonexporter/: CMakeLists.txt  ManagerWrapper.cpp  ManagerWrapper.hpp  example_commands.py  motorcycle.cpp  motorcycle_py.cpp  py_module.cpp  test.py
slaveinfo/: CMakeLists.txt  slaveinfo.c  slaveinfo.cpp
tester/: CMakeLists.txt  tester.cpp
